re init game with screen shakes & power ups

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         <script type="text/javascript" src="js/prefabs/PlayerBullet.js"></script>
         <script type="text/javascript" src="js/prefabs/EnemyBullet.js"></script>
         <script type="text/javascript" src="js/prefabs/FlyingEnemyBullet.js"></script>
+        <script type="text/javascript" src="js/prefabs/ShieldPowerUp.js"></script>
+        <script type="text/javascript" src="js/prefabs/SpeedBoost.js"></script>
 		<script src="js/main.js"></script>
 	</body>
 </html>
